# jawata-studio

./: .gitattributes  ARCHITECTURE-conductor.md  ARCHITECTURE-runner.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  github-support-request.txt  index.html  install.sh  package-lock.json  package.json  uninstall.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/backups/-tmp-jawata-studio-test-alloc-distinct-3760979-1784486581634405547-4-projects.json/: 1784486581634-0005
src-tauri/backups/-tmp-jawata-studio-test-dedupe-3760979-1784486581635426935-9-projects.json/: 1784486581635-0009
src-tauri/backups/-tmp-jawata-studio-test-migrate-port-3760979-1784486581635547391-11-projects.json/: 1784486581635-0010
src-tauri/backups/-tmp-jawata-studio-test-names-in-use-3760979-1784486581634200826-2-projects.json/: 1784486581634-0003  1784486581635-0008
src-tauri/backups/-tmp-jawata-studio-test-rename-ws-3760979-1784486581634105011-1-projects.json/: 1784486581634-0000  1784486581634-0002  1784486581634-0004
src-tauri/backups/-tmp-jawata-studio-test-set-ws-3760979-1784486581634788681-5-projects.json/: 1784486581634-0006
src-tauri/backups/-tmp-legacy-projects.json/: 1784486581635-0007
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backups.rs  commands.rs  conductor.rs  config.rs  gateway.rs  lib.rs  lombok.rs  main.rs  manager_service.rs  release_manager.rs  resident.rs  runner.rs  runtime_manager.rs
src-tauri/test-fixtures/architect-seat/: pom.xml
src-tauri/test-fixtures/javadoc-seat/: pom.xml
(+70 files in other folders)
